WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
115106
[BlackBerry] Fixes the San Angeles demo on khronos.org
https://bugs.webkit.org/show_bug.cgi?id=115106
Summary
[BlackBerry] Fixes the San Angeles demo on khronos.org
Jonathan Feldstein
Reported
2013-04-24 07:56:05 PDT
Fixes a bug in which the currently bound vertex array object's vertex array state was being modified as opposed to the default vertex array state.
Attachments
Patch
(1.54 KB, patch)
2013-04-24 07:58 PDT
,
Jonathan Feldstein
no flags
Details
Formatted Diff
Diff
Patch
(1.60 KB, patch)
2013-04-24 08:04 PDT
,
Jonathan Feldstein
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Jonathan Feldstein
Comment 1
2013-04-24 07:58:19 PDT
Created
attachment 199455
[details]
Patch
WebKit Commit Bot
Comment 2
2013-04-24 08:00:35 PDT
Attachment 199455
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCore/platform/graphics/blackberry/EGLImageLayerWebKitThread.cpp']" exit_code: 1 Source/WebCore/ChangeLog:12: Need whitespace between colon and description [changelog/filechangedescriptionwhitespace] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Jonathan Feldstein
Comment 3
2013-04-24 08:04:26 PDT
Created
attachment 199456
[details]
Patch
Rob Buis
Comment 4
2013-04-24 08:13:36 PDT
Comment on
attachment 199456
[details]
Patch Ok.
WebKit Commit Bot
Comment 5
2013-04-24 08:48:09 PDT
Comment on
attachment 199456
[details]
Patch Clearing flags on attachment: 199456 Committed
r149042
: <
http://trac.webkit.org/changeset/149042
>
WebKit Commit Bot
Comment 6
2013-04-24 08:48:11 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug