[BlackBerry] Fixes the San Angeles demo on khronos.org https://bugs.webkit.org/show_bug.cgi?id=115106

Patch by Jonathan Feldstein <jfeldstein@blackberry.com> on 2013-04-24
Reviewed by Rob Buis
Internally Reviewed by Jeremy Nicholl and Arvid Nilsson

Fixes a bug in which the currently bound vertex array object's vertex array
state was being modified as opposed to the default vertex array state.

* platform/graphics/blackberry/EGLImageLayerWebKitThread.cpp:
(EGLImageLayerWebKitThread::blitToFrontBuffer):

Canonical link: https://commits.webkit.org/133541@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149042 268f45cc-cd09-0410-ab3c-d52691b4dbfc